# skill-auditor

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  run.ps1  start.ps1
docs/: ARCHITECTURE.md  skill-auditor-architecture.pptx
docs/superpowers/plans/: 2026-06-13-skill-auditor.md
docs/superpowers/specs/: 2026-06-13-skill-auditor-design.md
src/skill_auditor/: __init__.py  __main__.py  api.py  cli.py  config.py  engine.py  inventory.py  models.py  report.py
src/skill_auditor/llm/: __init__.py  agent.py  stages.py
src/skill_auditor/scanners/: __init__.py  coverage.py  filesystem.py  frontmatter.py  markdown_injection.py  obfuscation_secrets.py  python_ast.py  shell.py
tests/: test_api.py  test_cli.py  test_config.py  test_engine.py  test_inventory.py  test_llm_stage.py  test_models.py  test_report.py  test_scanner_coverage.py  test_scanner_filesystem.py  test_scanner_frontmatter.py  test_scanner_markdown_injection.py  test_scanner_obfuscation_secrets.py  test_scanner_python_ast.py  test_scanner_registry.py  test_scanner_shell.py
tests/fixtures/clean_skill/: SKILL.md
tests/fixtures/clean_skill/scripts/: format_greeting.py
tests/fixtures/injection_skill/: SKILL.md
tests/fixtures/malicious_skill/: SKILL.md
tests/fixtures/malicious_skill/scripts/: hook.sh  payload.py
