[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "skill-auditor"
version = "0.1.0"
description = "Static + LLM security auditor for downloaded Agent Skills"
requires-python = ">=3.11"
dependencies = [
    "pydantic-ai>=1.0",
    "pydantic>=2.0",
    "rich>=13.0",
    "python-dotenv>=1.0",
    "pyyaml>=6.0",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "python-multipart>=0.0.9",
]

[dependency-groups]
dev = ["pytest>=8.0", "pytest-cov>=5.0", "httpx>=0.27"]

[tool.hatch.build.targets.wheel]
packages = ["src/skill_auditor"]

[tool.pytest.ini_options]
testpaths = ["tests"]
norecursedirs = ["fixtures"]
